# Telemetry_in_C

./: CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  main.c
main/mqtt/: mqtt_com.c  mqtt_com.h
main/sdcard/: sd_logger.c  sd_logger.h
main/sensors/: current_sensor.c  hall_sensor.c  sensors.c  sensors.h  voltage_sensor.c
main/wifi/: access_point.c  access_point.h
spiffs/: index.html
